--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                         <div class="home-info">
                             <h3 class="hello">Hello, I am <span class="name">Sushma s</span></h3>
                             <h3 class="my-pofession">I'm a <span class="typing">software developer</span></h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus obcaecati neque veniam ex deserunt, consequatur fugit debitis sapiente fugiat maiores quasi doloribus odio quibusdam facere amet harum aperiam voluptatum nemo.</p>
+                            <p>Motivated fresher with strong knowledge of Python, MySQL, and web development technologies.
+Skilled in building basic applications, writing clean code, and working with databases.
+Quick learner with good problem-solving abilities and a passion for continuous learning.
+Seeking an entry-level role to apply skills and grow as a software professional.</p>
                             <a href="#contact" class="btn hire-me">Hire me</a>
                         </div>
                         
@@ -401,4 +404,5 @@
      <script src="intro.js"></script>
      <script src="style-switcher.js"></script>
 </body>
+
 </html>
